<resources>
    <string name="app_name">Mafia</string>
    <string name="new_game">Новая игра</string>
    <string name="start_tittle">Новая игра</string>
    <string name="players_tittle">Выбор игроков</string>
    <string name="add_new_player">Добавьте игрока</string>
    <string name="add">Добавить</string>
    <string name="no_name">Введите имя нового игрока</string>
    <string name="same_name">Такой игрок уже есть в игре</string>
    <string name="next">Далее</string>
    <string name="mafia">Мафия</string>
    <string name="don">Дон</string>
    <string name="sheriff">Комиссар</string>
    <string name="yakudza">Якудза</string>
    <string name="sensey">Сэнсэй</string>
    <string name="killer">Маньяк</string>
    <string name="doctor">Доктор</string>
    <string name="reviver">Реаниматор</string>
    <string name="lover">Любовница</string>
    <string name="immortal">Бессмертный</string>
    <string name="priest">Священник</string>
    <string name="journalist">Журналист</string>
    <string name="civilian">Мирный житель</string>
    <string name="werewolf">Оборотень</string>
    <string name="count">Количество</string>
    <string name="few_players">Для игры надо минимум 4 игрока</string>
    <string name="wrong_number">Количество игроков не соответствует количеству ролей</string>
    <string name="start_game">Начать игру</string>
    <string name="shuffle_tittle">Раздача ролей</string>
    <string name="edit">Окно редактирования</string>
    <string name="delete">Удалить</string>
    <string name="rename">Переименовать</string>
    <string name="exit">Вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="start_move">Начать ход</string>
    <string name="vote">Голосование</string>
    <string name="killed">Убиты:</string>
    <string name="non_killed">Никто не убит</string>
    <string name="silent">Молчат:</string>
    <string name="non_silent">Никто не молчит</string>
    <string name="miss">Пропуск</string>
    <string name="guess_sheriff">Красный - комиссар, черный - не комиссар</string>
    <string name="guess_black">Красный - мирный игрок, черный - игрок из клана убийц</string>
    <string name="doctor_repied">Доктор уже лечил сам себя</string>
    <string name="doctor_wrong">Нельзя лечить 2 ночи подряд одного человека</string>
    <string name="wake_up">Разбудите:</string>
    <string name="lover_repied">Любовница уже любила сама себя</string>
    <string name="lover_wrong">Нельзя любить 2 ночи подряд одного человека</string>
    <string name="back_to_menu">Вернуться в меню</string>
    <string name="repied_game">Новая игра тем же составом</string>
    <string name="turn_tittle">Игровой процесс</string>
    <string name="end_tittle">Конец игры</string>
    <string name="red_win">Победа мирных жителей</string>
    <string name="black_win">Победа кланов убийц</string>
    <string name="too_much_for_role">Для корректной игры необходим 1 человек этой роли</string>
    <string name="journalist_fail">Журналист находится в разработке</string>
</resources>
