<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/hint"
        android:layout_weight="12" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:weightSum="4"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/mafia"
                android:id="@+id/mafia"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/don"
                android:id="@+id/don"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/sheriff"
                android:id="@+id/sheriff"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/civilian"
                android:id="@+id/civilian"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/yakudza"
                android:id="@+id/yakudza"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/sensey"
                android:id="@+id/sensey"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/killer"
                android:id="@+id/killer"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="7">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_mafia"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_don"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_sherif"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_civilian"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_yakudza"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_sensey"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_killer"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/doctor"
                android:id="@+id/doctor"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/reviver"
                android:id="@+id/reviver"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/lover"
                android:id="@+id/lover"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/priest"
                android:id="@+id/priest"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/journalist"
                android:id="@+id/journalist"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/immortal"
                android:id="@+id/immortal"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/werewolf"
                android:id="@+id/werewolf"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="7">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_doctor"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_reviver"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_lover"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_priest"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_journalist"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_immortal"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/num_werewolf"
                android:layout_weight="1"
                android:hint="@string/count"
                android:text="0" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/next"
        android:id="@+id/player_next"
        android:layout_weight="8" />
</LinearLayout>